# asterisk-vox

./: INSTALL  README.md
app-vox/app_voxasr/: Makefile.am  app_voxasr.c  bootstrap  configure.ac  grpc_stt.cpp  grpc_stt.h  roots.pem.h
app-vox/app_voxtts/: Makefile.am  app_voxtts.c  bytequeue.cpp  bytequeue.h  channel.cpp  channel.h  channelbackend.cpp  channelbackend.h  configure.ac  grpctts.cpp  grpctts.h  grpctts_conf.c  grpctts_conf.h  job.cpp  job.h  stream_layers.c  stream_layers.h  tts_api.proto
app-vox/app_waitevent/: Makefile.am  app_waitevent.c
app-vox/func_gettimensec/: Makefile.am  bootstrap  func_gettimensec.c
app-vox/include/asterisk/: autoconfig.h  build.h  buildopts.h
examples/: extensions.ael
examples/asr/: vox.conf
examples/tts/: voxtts.conf
